# qiskit_learning

./: README.md  main.py  pyproject.toml
examples/: basic_gates.py  bell_state.qasm  ion_trap_compiler.py  ion_trap_compiler_test.py  ion_trap_compiler_verification.py  ion_trap_measurement_demo.py  ion_trap_tutorial.ipynb  ion_trap_usage_example.py  openqasm3_examples.py  openqasm3_tutorial.ipynb  qiskit_tutorial.ipynb  quick_compiler_test.py  quick_gate_verification.py  test_gate_definitions.py  verify_gate_decomposition.py
qiskit_learning/: __init__.py
qiskit_learning/ion_trap/: __init__.py  compiler.py
