[project]
name = "qiskit-learning-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "openqasm3>=1.0.1",
    "qiskit>=2.0.2",
    "qiskit-aer>=0.17.1",
    "qiskit-qasm3-import>=0.5.1",
]
